# pm-tools

./: .gitignore  .shellcheckrc  CLAUDE.md  README.md  cli-design-for-agents.md  demo.md  install-remote.sh  install.sh  plan.md  pyproject.toml  spec.md  todos.md  uninstall.sh
.claude/: handoff.md
.pm/: audit.jsonl
docs/: audit_trace_cache_strategy.md  curl-install-plan.md  date-parsing-plan.md  handoff.md  issue-8-download-diagnostics-plan.md  nxml-refs-plan.md  pm-cite-plan.md  pm-diff-optimization-plan.md  pm-diff-plan.md  pm-download-plan.md  pm-filter-plan.md  pm-quick-plan.md  pm-skill-plan.md  pmc-tgz-extraction-plan.md
e2e/: .gitignore  AB2_REPORT.md  AB3_REPORT.md  AB4_REPORT.md  AB_TEST_REPORT.md  REPORT.md
fixtures/: sample.nxml
lib/: pm-common.sh
scripts/: baseline-to-xtract-jsonl.sh  benchmark-parser.sh  benchmark-pm-diff.sh  compare-jsonl.sh  dtd-to-xpath.sh  extract-fixtures.sh  generate-dtd-tests.sh  generate-golden.sh
test/: baseline-validation.bats  dtd-to-xpath.bats  extract-fixtures.bats  generate-dtd-tests.bats  generate-golden.bats  install-remote.bats  integration.bats  pm-cite.bats  pm-common.bats  pm-diff.bats  pm-download.bats  pm-fetch.bats  pm-filter.bats  pm-parse-dates.bats  pm-parse.bats  pm-quick.bats  pm-search.bats  pm-skill.bats  test_helper.bash  uninstall.bats
tests/: conftest.py  test_audit.py  test_batch_fetch.py  test_cache.py  test_cite.py  test_collect.py  test_csl_json.py  test_diff.py  test_download.py  test_fetch.py  test_filter.py  test_http.py  test_init.py  test_io.py  test_parse.py  test_refs.py  (+2 more)
(+130 files in other folders)
