[project]
name = "pm-tools"
version = "0.1.0"
description = "PubMed CLI tools for AI agents — search, fetch, parse, filter, cite, diff, download"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28",
]

[project.scripts]
pm = "pm_tools.cli:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.11",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
